[package]
name = "snesimage"
version = "0.1.0"
authors = ["Jason Lynch <jason@aexoden.com>"]
edition = "2021"
description = "Tool to optimize images for use on the SNES"
repository = "https://github.com/aexoden/snesimage"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "retro"]
categories = ["multimedia::images"]

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
multiple_crate_versions = "allow"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
cached = "0.53.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.20", features = ["derive"] }
cogset = "0.2"
fern = { version = "0.7", features = ["colored"] }
image = "0.25.4"
log = "0.4"
palette = "0.7.6"
rand = "0.8.5"
rgb = "0.8"
sdl2 = "0.37.0"
serde_json = "1.0.129"
ssimulacra2 = "0.5.0"
