[package]
name = "snesimage"
version = "0.1.1"
edition = "2024"
description = "Tool to optimize images for use on the SNES"
repository = "https://github.com/aexoden/snesimage"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "retro"]
categories = ["multimedia::images"]

[dependencies]
anyhow = { version = "=1.0.100", features = ["backtrace"] }
cached = "=0.59.0"
chrono = { version = "=0.4.42", default-features = false, features = ["clock"] }
clap = { version = "=4.5.49", features = ["derive"] }
cogset = "=0.2.0"
fern = { version = "=0.7.1", features = ["colored"] }
image = "=0.25.8"
log = "=0.4.29"
palette = "=0.7.6"
rand = "=0.10.1"
rgb = "=0.8.53"
sdl2 = "=0.38.0"
serde_json = "=1.0.149"
ssimulacra2 = "=0.5.1"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
